y.output
Terminals which are not used

   TOKEN_ERROR
   OPERATOR_G
   OPERATOR_L


State 37 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: element

    2 element: variablelDeclaration element
    3        | functionDeclaration element
    4        | /* empty */

    5 variablelDeclaration: type TK_IDENTIFIER '=' expression ';'
    6                     | type TK_IDENTIFIER 'q' LIT_INTEGER 'p' ';'
    7                     | type TK_IDENTIFIER 'q' LIT_INTEGER 'p' ':' arrayInitialization ';'

    8 arrayInitialization: literal arrayInitialization
    9                    | literal

   10 type: KW_CHAR
   11     | KW_INT
   12     | KW_FLOAT

   13 expression: literal
   14           | TK_IDENTIFIER
   15           | TK_IDENTIFIER 'q' expression 'p'
   16           | TK_IDENTIFIER 'd' parameters 'b'
   17           | TK_IDENTIFIER 'd' 'b'
   18           | expression '+' expression
   19           | expression '-' expression
   20           | expression '*' expression
   21           | expression '/' expression
   22           | expression OPERATOR_LE expression
   23           | expression OPERATOR_GE expression
   24           | expression '>' expression
   25           | expression '<' expression
   26           | expression OPERATOR_EQ expression
   27           | expression OPERATOR_OR expression
   28           | expression OPERATOR_AND expression
   29           | OPERATOR_NOT expression
   30           | 'd' expression 'b'

   31 parameters: expression parameters
   32           | ',' expression parameters
   33           | ',' expression
   34           | expression

   35 literal: LIT_CHAR
   36        | LIT_FLOAT
   37        | LIT_INTEGER

   38 functionDeclaration: head body

   39 head: type TK_IDENTIFIER 'd' parametersDeclaration 'b'
   40     | type TK_IDENTIFIER 'd' 'b'

   41 parametersDeclaration: type TK_IDENTIFIER parametersDeclaration
   42                      | ',' type TK_IDENTIFIER parametersDeclaration
   43                      | ',' type TK_IDENTIFIER
   44                      | type TK_IDENTIFIER

   45 body: block

   46 block: '{' commandList '}'
   47      | '{' '}'

   48 commandList: command ';' commandList
   49            | command ';'
   50            | ';' commandList
   51            | ';'

   52 command: atribuation
   53        | read
   54        | print
   55        | fluxControl
   56        | return
   57        | block

   58 atribuation: TK_IDENTIFIER '=' expression
   59            | TK_IDENTIFIER 'q' expression 'p' '=' expression

   60 read: KW_READ TK_IDENTIFIER

   61 print: KW_PRINT printItems

   62 printItems: LIT_STRING ',' printItems
   63           | expression ',' printItems
   64           | LIT_STRING
   65           | expression

   66 return: KW_RETURN expression

   67 fluxControl: KW_IF expression KW_THEN command KW_ELSE command
   68            | KW_IF expression KW_THEN command
   69            | KW_WHILE expression command


Terminals, with rules where they appear

$end (0) 0
'*' (42) 20
'+' (43) 18
',' (44) 32 33 42 43 62 63
'-' (45) 19
'/' (47) 21
':' (58) 7
';' (59) 5 6 7 48 49 50 51
'<' (60) 25
'=' (61) 5 58 59
'>' (62) 24
'b' (98) 16 17 30 39 40
'd' (100) 16 17 30 39 40
'p' (112) 6 7 15 59
'q' (113) 6 7 15 59
'{' (123) 46 47
'}' (125) 46 47
error (256)
KW_CHAR (258) 10
KW_INT (259) 11
KW_FLOAT (260) 12
KW_IF (261) 67 68
KW_THEN (262) 67 68
KW_ELSE (263) 67
KW_WHILE (264) 69
KW_READ (265) 60
KW_RETURN (266) 66
KW_PRINT (267) 61
OPERATOR_LE (268) 22
OPERATOR_GE (269) 23
OPERATOR_EQ (270) 26
OPERATOR_OR (271) 27
OPERATOR_AND (272) 28
OPERATOR_NOT (273) 29
TK_IDENTIFIER (274) 5 6 7 14 15 16 17 39 40 41 42 43 44 58 59 60
LIT_INTEGER (275) 6 7 37
LIT_FLOAT (276) 36
LIT_CHAR (277) 35
LIT_STRING (278) 62 64
TOKEN_ERROR (279)
OPERATOR_G (280)
OPERATOR_L (281)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
element (45)
    on left: 2 3 4, on right: 1 2 3
variablelDeclaration (46)
    on left: 5 6 7, on right: 2
arrayInitialization (47)
    on left: 8 9, on right: 7 8
type (48)
    on left: 10 11 12, on right: 5 6 7 39 40 41 42 43 44
expression (49)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
   , on right: 5 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 58 59 63 65 66 67 68 69
parameters (50)
    on left: 31 32 33 34, on right: 16 31 32
literal (51)
    on left: 35 36 37, on right: 8 9 13
functionDeclaration (52)
    on left: 38, on right: 3
head (53)
    on left: 39 40, on right: 38
parametersDeclaration (54)
    on left: 41 42 43 44, on right: 39 41 42
body (55)
    on left: 45, on right: 38
block (56)
    on left: 46 47, on right: 45 57
commandList (57)
    on left: 48 49 50 51, on right: 46 48 50
command (58)
    on left: 52 53 54 55 56 57, on right: 48 49 67 68 69
atribuation (59)
    on left: 58 59, on right: 52
read (60)
    on left: 60, on right: 53
print (61)
    on left: 61, on right: 54
printItems (62)
    on left: 62 63 64 65, on right: 61 62 63
return (63)
    on left: 66, on right: 56
fluxControl (64)
    on left: 67 68 69, on right: 55


state 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (element)

    program               go to state 4
    element               go to state 5
    variablelDeclaration  go to state 6
    type                  go to state 7
    functionDeclaration   go to state 8
    head                  go to state 9


state 1

   10 type: KW_CHAR .

    $default  reduce using rule 10 (type)


state 2

   11 type: KW_INT .

    $default  reduce using rule 11 (type)


state 3

   12 type: KW_FLOAT .

    $default  reduce using rule 12 (type)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 10


state 5

    1 program: element .

    $default  reduce using rule 1 (program)


state 6

    2 element: variablelDeclaration . element

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (element)

    element               go to state 11
    variablelDeclaration  go to state 6
    type                  go to state 7
    functionDeclaration   go to state 8
    head                  go to state 9


state 7

    5 variablelDeclaration: type . TK_IDENTIFIER '=' expression ';'
    6                     | type . TK_IDENTIFIER 'q' LIT_INTEGER 'p' ';'
    7                     | type . TK_IDENTIFIER 'q' LIT_INTEGER 'p' ':' arrayInitialization ';'
   39 head: type . TK_IDENTIFIER 'd' parametersDeclaration 'b'
   40     | type . TK_IDENTIFIER 'd' 'b'

    TK_IDENTIFIER  shift, and go to state 12


state 8

    3 element: functionDeclaration . element

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (element)

    element               go to state 13
    variablelDeclaration  go to state 6
    type                  go to state 7
    functionDeclaration   go to state 8
    head                  go to state 9


state 9

   38 functionDeclaration: head . body

    '{'  shift, and go to state 14

    body   go to state 15
    block  go to state 16


state 10

    0 $accept: program $end .

    $default  accept


state 11

    2 element: variablelDeclaration element .

    $default  reduce using rule 2 (element)


state 12

    5 variablelDeclaration: type TK_IDENTIFIER . '=' expression ';'
    6                     | type TK_IDENTIFIER . 'q' LIT_INTEGER 'p' ';'
    7                     | type TK_IDENTIFIER . 'q' LIT_INTEGER 'p' ':' arrayInitialization ';'
   39 head: type TK_IDENTIFIER . 'd' parametersDeclaration 'b'
   40     | type TK_IDENTIFIER . 'd' 'b'

    '='  shift, and go to state 17
    'q'  shift, and go to state 18
    'd'  shift, and go to state 19


state 13

    3 element: functionDeclaration element .

    $default  reduce using rule 3 (element)


state 14

   46 block: '{' . commandList '}'
   47      | '{' . '}'

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_READ        shift, and go to state 22
    KW_RETURN      shift, and go to state 23
    KW_PRINT       shift, and go to state 24
    TK_IDENTIFIER  shift, and go to state 25
    ';'            shift, and go to state 26
    '{'            shift, and go to state 14
    '}'            shift, and go to state 27

    block        go to state 28
    commandList  go to state 29
    command      go to state 30
    atribuation  go to state 31
    read         go to state 32
    print        go to state 33
    return       go to state 34
    fluxControl  go to state 35


state 15

   38 functionDeclaration: head body .

    $default  reduce using rule 38 (functionDeclaration)


state 16

   45 body: block .

    $default  reduce using rule 45 (body)


state 17

    5 variablelDeclaration: type TK_IDENTIFIER '=' . expression ';'

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 42
    literal     go to state 43


state 18

    6 variablelDeclaration: type TK_IDENTIFIER 'q' . LIT_INTEGER 'p' ';'
    7                     | type TK_IDENTIFIER 'q' . LIT_INTEGER 'p' ':' arrayInitialization ';'

    LIT_INTEGER  shift, and go to state 44


state 19

   39 head: type TK_IDENTIFIER 'd' . parametersDeclaration 'b'
   40     | type TK_IDENTIFIER 'd' . 'b'

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    'b'       shift, and go to state 45
    ','       shift, and go to state 46

    type                   go to state 47
    parametersDeclaration  go to state 48


state 20

   67 fluxControl: KW_IF . expression KW_THEN command KW_ELSE command
   68            | KW_IF . expression KW_THEN command

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 49
    literal     go to state 43


state 21

   69 fluxControl: KW_WHILE . expression command

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 50
    literal     go to state 43


state 22

   60 read: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 51


state 23

   66 return: KW_RETURN . expression

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 52
    literal     go to state 43


state 24

   61 print: KW_PRINT . printItems

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    LIT_STRING     shift, and go to state 53
    'd'            shift, and go to state 41

    expression  go to state 54
    literal     go to state 43
    printItems  go to state 55


state 25

   58 atribuation: TK_IDENTIFIER . '=' expression
   59            | TK_IDENTIFIER . 'q' expression 'p' '=' expression

    '='  shift, and go to state 56
    'q'  shift, and go to state 57


state 26

   50 commandList: ';' . commandList
   51            | ';' .

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_READ        shift, and go to state 22
    KW_RETURN      shift, and go to state 23
    KW_PRINT       shift, and go to state 24
    TK_IDENTIFIER  shift, and go to state 25
    ';'            shift, and go to state 26
    '{'            shift, and go to state 14

    $default  reduce using rule 51 (commandList)

    block        go to state 28
    commandList  go to state 58
    command      go to state 30
    atribuation  go to state 31
    read         go to state 32
    print        go to state 33
    return       go to state 34
    fluxControl  go to state 35


state 27

   47 block: '{' '}' .

    $default  reduce using rule 47 (block)


state 28

   57 command: block .

    $default  reduce using rule 57 (command)


state 29

   46 block: '{' commandList . '}'

    '}'  shift, and go to state 59


state 30

   48 commandList: command . ';' commandList
   49            | command . ';'

    ';'  shift, and go to state 60


state 31

   52 command: atribuation .

    $default  reduce using rule 52 (command)


state 32

   53 command: read .

    $default  reduce using rule 53 (command)


state 33

   54 command: print .

    $default  reduce using rule 54 (command)


state 34

   56 command: return .

    $default  reduce using rule 56 (command)


state 35

   55 command: fluxControl .

    $default  reduce using rule 55 (command)


state 36

   29 expression: OPERATOR_NOT . expression

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 61
    literal     go to state 43


state 37

   14 expression: TK_IDENTIFIER .
   15           | TK_IDENTIFIER . 'q' expression 'p'
   16           | TK_IDENTIFIER . 'd' parameters 'b'
   17           | TK_IDENTIFIER . 'd' 'b'

    'q'  shift, and go to state 62
    'd'  shift, and go to state 63

    'd'       [reduce using rule 14 (expression)]
    $default  reduce using rule 14 (expression)


state 38

   37 literal: LIT_INTEGER .

    $default  reduce using rule 37 (literal)


state 39

   36 literal: LIT_FLOAT .

    $default  reduce using rule 36 (literal)


state 40

   35 literal: LIT_CHAR .

    $default  reduce using rule 35 (literal)


state 41

   30 expression: 'd' . expression 'b'

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 64
    literal     go to state 43


state 42

    5 variablelDeclaration: type TK_IDENTIFIER '=' expression . ';'
   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression

    OPERATOR_LE   shift, and go to state 65
    OPERATOR_GE   shift, and go to state 66
    OPERATOR_EQ   shift, and go to state 67
    OPERATOR_OR   shift, and go to state 68
    OPERATOR_AND  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '+'           shift, and go to state 72
    '-'           shift, and go to state 73
    '*'           shift, and go to state 74
    '/'           shift, and go to state 75
    ';'           shift, and go to state 76


state 43

   13 expression: literal .

    $default  reduce using rule 13 (expression)


state 44

    6 variablelDeclaration: type TK_IDENTIFIER 'q' LIT_INTEGER . 'p' ';'
    7                     | type TK_IDENTIFIER 'q' LIT_INTEGER . 'p' ':' arrayInitialization ';'

    'p'  shift, and go to state 77


state 45

   40 head: type TK_IDENTIFIER 'd' 'b' .

    $default  reduce using rule 40 (head)


state 46

   42 parametersDeclaration: ',' . type TK_IDENTIFIER parametersDeclaration
   43                      | ',' . type TK_IDENTIFIER

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    type  go to state 78


state 47

   41 parametersDeclaration: type . TK_IDENTIFIER parametersDeclaration
   44                      | type . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 79


state 48

   39 head: type TK_IDENTIFIER 'd' parametersDeclaration . 'b'

    'b'  shift, and go to state 80


state 49

   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression
   67 fluxControl: KW_IF expression . KW_THEN command KW_ELSE command
   68            | KW_IF expression . KW_THEN command

    KW_THEN       shift, and go to state 81
    OPERATOR_LE   shift, and go to state 65
    OPERATOR_GE   shift, and go to state 66
    OPERATOR_EQ   shift, and go to state 67
    OPERATOR_OR   shift, and go to state 68
    OPERATOR_AND  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '+'           shift, and go to state 72
    '-'           shift, and go to state 73
    '*'           shift, and go to state 74
    '/'           shift, and go to state 75


state 50

   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression
   69 fluxControl: KW_WHILE expression . command

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_READ        shift, and go to state 22
    KW_RETURN      shift, and go to state 23
    KW_PRINT       shift, and go to state 24
    OPERATOR_LE    shift, and go to state 65
    OPERATOR_GE    shift, and go to state 66
    OPERATOR_EQ    shift, and go to state 67
    OPERATOR_OR    shift, and go to state 68
    OPERATOR_AND   shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 25
    '<'            shift, and go to state 70
    '>'            shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75
    '{'            shift, and go to state 14

    block        go to state 28
    command      go to state 82
    atribuation  go to state 31
    read         go to state 32
    print        go to state 33
    return       go to state 34
    fluxControl  go to state 35


state 51

   60 read: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 60 (read)


state 52

   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression
   66 return: KW_RETURN expression .

    OPERATOR_LE   shift, and go to state 65
    OPERATOR_GE   shift, and go to state 66
    OPERATOR_EQ   shift, and go to state 67
    OPERATOR_OR   shift, and go to state 68
    OPERATOR_AND  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '+'           shift, and go to state 72
    '-'           shift, and go to state 73
    '*'           shift, and go to state 74
    '/'           shift, and go to state 75

    $default  reduce using rule 66 (return)


state 53

   62 printItems: LIT_STRING . ',' printItems
   64           | LIT_STRING .

    ','  shift, and go to state 83

    $default  reduce using rule 64 (printItems)


state 54

   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression
   63 printItems: expression . ',' printItems
   65           | expression .

    OPERATOR_LE   shift, and go to state 65
    OPERATOR_GE   shift, and go to state 66
    OPERATOR_EQ   shift, and go to state 67
    OPERATOR_OR   shift, and go to state 68
    OPERATOR_AND  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '+'           shift, and go to state 72
    '-'           shift, and go to state 73
    '*'           shift, and go to state 74
    '/'           shift, and go to state 75
    ','           shift, and go to state 84

    $default  reduce using rule 65 (printItems)


state 55

   61 print: KW_PRINT printItems .

    $default  reduce using rule 61 (print)


state 56

   58 atribuation: TK_IDENTIFIER '=' . expression

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 85
    literal     go to state 43


state 57

   59 atribuation: TK_IDENTIFIER 'q' . expression 'p' '=' expression

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 86
    literal     go to state 43


state 58

   50 commandList: ';' commandList .

    $default  reduce using rule 50 (commandList)


state 59

   46 block: '{' commandList '}' .

    $default  reduce using rule 46 (block)


state 60

   48 commandList: command ';' . commandList
   49            | command ';' .

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_READ        shift, and go to state 22
    KW_RETURN      shift, and go to state 23
    KW_PRINT       shift, and go to state 24
    TK_IDENTIFIER  shift, and go to state 25
    ';'            shift, and go to state 26
    '{'            shift, and go to state 14

    $default  reduce using rule 49 (commandList)

    block        go to state 28
    commandList  go to state 87
    command      go to state 30
    atribuation  go to state 31
    read         go to state 32
    print        go to state 33
    return       go to state 34
    fluxControl  go to state 35


state 61

   18 expression: expression . '+' expression
   19           | expression . '-' expression
   20           | expression . '*' expression
   21           | expression . '/' expression
   22           | expression . OPERATOR_LE expression
   23           | expression . OPERATOR_GE expression
   24           | expression . '>' expression
   25           | expression . '<' expression
   26           | expression . OPERATOR_EQ expression
   27           | expression . OPERATOR_OR expression
   28           | expression . OPERATOR_AND expression
   29           | OPERATOR_NOT expression .

    OPERATOR_LE  shift, and go to state 65
    OPERATOR_GE  shift, and go to state 66
    OPERATOR_EQ  shift, and go to state 67

    $default  reduce using rule 29 (expression)


state 62

   15 expression: TK_IDENTIFIER 'q' . expression 'p'

    OPERATOR_NOT   shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    'd'            shift, and go to state 41

    expression  go to state 88
    literal     go to state 43


state 63

   16 expression: TK_IDENTIFIER 'd' . parameters 'b'
   17           | TK_IDENTIFIER 'd' . 'b'
